[package]
name = "anlaut-3"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
text_scroller = { path = "crates/text_scroller" }
geng = "0.17"
geng-utils = "0.3"
image = "0.25"
serde = { version = "1", features = ["derive"] }
unicode-segmentation = "1.10"

[dependencies]
text_scroller.workspace = true
geng.workspace = true
geng-utils.workspace = true
image.workspace = true
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "5.1.0"

[patch.crates-io]
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm" } # TODO: until https://github.com/smol-rs/async-broadcast/pull/47 is merged
